--- a/PassportJsLoginLama/src/app.css
+++ b/PassportJsLoginLama/src/app.css
@@ -32,6 +32,20 @@ html {
   justify-content: start;
 }
 
+.navbar__login--link {
+   font-size: 22px;
+   font-weight: bold;
+   text-transform: uppercase;
+   display: grid;
+   place-items: center;
+   justify-content: start;
+
+}
+.navbar__link {
+   color:inherit;
+   text-decoration: none;
+}
+
 .navbar__list {
   display: grid;
   grid-auto-flow: column;
@@ -156,8 +170,10 @@ html {
    padding: 0;
    margin: 0;
    position: absolute;
-   top: 8%;
-   left: 16%;
+   top: 15%;
+   left: 40%;
+   color: lightgray;
+   font-size: 42px;
 }
 
 .login__center {
@@ -217,4 +233,34 @@ html {
    height: 30px;
    margin-right: 10px;
    object-fit: cover;
+}
+
+.login__input {
+   width: 75%;
+   padding: 15px 20px;
+   border-radius: 5px;
+   color:white;
+   font-weight: bold;
+   font-size: 18px;
+   margin-bottom: 20px;
+   
+}
+
+.login__submit {
+   width: 50%;
+   padding: 15px 20px;
+   border:none;
+   border-radius: 5px;
+   color:white;
+   font-weight: bold;
+   font-size: 18px;
+   cursor: pointer;
+   display: flex;
+   align-items: center;
+   justify-content: start;
+   margin: 0px 19%;
+   background-color: var(--darkenPurple);
+   display: flex;
+   justify-content: center;
+   text-transform: uppercase;
 }
